@@ -44,6 +44,7 @@ https://github.com/elastic/beats/compare/v5.0.0-alpha3...master[Check the HEAD d
 *Packetbeat*
 - Add missing nil-check to memcached GapInStream handler. {issue}1162[1162]
 - Fix NFSv4 Operation returning the first found first-class operation available in compound requests. {pull}1821[1821]
+- Fix TCP overlapping segments not being handled correctly. {pull}1898[1898]
 
 *Topbeat*
 
